--- a/examples/starter/.env.site
+++ b/examples/starter/.env.site
@@ -29,14 +29,14 @@ SITE_URL='https://www.example.com/'
 # GOOGLE_TAGMANAGER_ID='GTM-XXXXXXX'
 
 # Robots.txt plugin is enabled by default.
-# To disable it - uncomment the following line
-# ROBOTSTXT_ENABLED='0'
+# To disable it - set value to '0'
+ROBOTSTXT_ENABLED='1'
 
 # To define custom rules in robots.txt, set ROBOTSTXT_POLICIES to JSON string containing a list of policies.
 # Format required for policies is described in https://github.com/itgalaxy/generate-robotstxt/tree/65abc04050ee0bb7bc1612163eb5af8c416c6994#usage
 
 # To add sitemap.xml to robots.txt file, set ROBOTSTXT_SITEMAP env variable to your site sitemap.xml
-# ROBOTSTXT_SITEMAP='https://www.example.com/sitemap.xml'
+ROBOTSTXT_SITEMAP='https://www.example.com/sitemap.xml'
 
 # The Site tailwind theme is enabled by default.
 # To disable it - uncomment the following line.
