--- a/packages/bodiless-tokens/package.json
+++ b/packages/bodiless-tokens/package.json
@@ -36,6 +36,7 @@
     "@bodiless/layouts-ui": "^0.2.9",
     "informed": "~3.13.1",
     "lodash": "^4.17.19",
+    "md5-hex": "^4.0.0",
     "mobx-react-lite": "^1.3.1",
     "uuid": "^3.3.2"
   },
