--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -60,6 +60,7 @@
     "@types/walk": "^2.3.0",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.0",
+    "crypto-browserify": "^3.12.0",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "fast-glob": "^3.2.5",
@@ -68,15 +69,18 @@
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-emotion": "^2.0.6",
     "gatsby-plugin-google-fonts": "^0.0.4",
-    "gatsby-plugin-manifest": "^2.0.5",
+    "gatsby-plugin-manifest": "^3.6.0",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-postcss": "4.8.0",
-    "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.6.31",
-    "gatsby-plugin-typescript": "^2.3.3",
-    "gatsby-source-filesystem": "^2.0.4",
+    "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-plugin-typescript": "^3.12.0",
+    "gatsby-plugin-image": "^1.9.0",
+    "gatsby-plugin-sharp": "^3.9.0",
+    "gatsby-source-filesystem": "^3.9.0",
+    "gatsby-transformer-sharp": "^3.9.0",
     "git-branch": "^2.0.1",
     "glob": "^7.1.6",
     "informed": "~3.13.1",
@@ -88,15 +92,17 @@
     "nodegit": "^0.27.0",
     "null-loader": "^3.0.0",
     "postcss": "^8.2.4",
+    "process": "^0.11.10",
     "slash": "^2.0.0",
     "sleep-promise": "^8.0.1",
+    "stream-browserify": "^3.0.0",
     "tailwindcss": "^2.0.2",
     "universal-cookie": "^4.0.3",
     "walk": "^2.3.14",
     "walkdir": "^0.4.1"
   },
   "peerDependencies": {
-    "gatsby": "^2.0.19",
+    "gatsby": "^3.0.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0"
   }
