--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -7,7 +7,7 @@
     "skipDefaultLibCheck": true,
     "noUnusedLocals": true,
     "lib": ["es7", "dom"],
-    "types": ["node", "jest"],
+    "types": ["jest", "node"],
     "checkJs": false,
     "jsx": "react",
     "strict": true,
