--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "cypress-failed-log": "^2.6.0",
     "debug": "^4.1.1",
     "html2canvas": "^1.0.0-rc.3",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "start-server-and-test": "^1.12.0",
     "symlink-dir": "^3.0.3"
   },
@@ -73,12 +73,13 @@
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.158",
     "@types/rc-tooltip": "^3.7.1",
-    "@types/react-dom": "^16.8.5",
+    "@types/react-dom": "^17.0.2",
     "@types/slate": "^0.44.0",
     "@types/slate-react": "^0.21.1",
     "@types/uuid": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.9.0",
     "cross-env": "^5.2.0",
@@ -87,7 +88,6 @@
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
     "eslint": "^7.27.0",
     "eslint-config-airbnb": "18.1.0",
@@ -110,14 +110,14 @@
     "npm-run-all": "^4.1.5",
     "ora": "^4.0.2",
     "postcss-cli": "^7.1.0",
-    "react-test-renderer": "16.8.4",
+    "react-test-renderer": "^17.0.2",
     "rimraf": "^2.6.3",
     "ts-jest": "^26.4.4",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
-    "typescript": "^3.9.7",
     "typedoc": "^0.17.8",
-    "typedoc-plugin-markdown": "^2.3.1"
+    "typedoc-plugin-markdown": "^2.3.1",
+    "typescript": "^3.9.7"
   },
   "repository": {
     "type": "git",
