--- a/examples/test-site/.env.site
+++ b/examples/test-site/.env.site
@@ -1,10 +1,10 @@
 # Git commits are disabled by default.
 # To enable it - uncomment the following line.
-# BODILESS_BACKEND_COMMIT_ENABLED='1'
+BODILESS_BACKEND_COMMIT_ENABLED='1'
 
 # The Backend Data Save is enabled by default.
 # To disable it - uncomment the following line.
-# BODILESS_BACKEND_SAVE_ENABLED='0'
+BODILESS_BACKEND_SAVE_ENABLED='0'
 
 # Git commit paths used by the backend, in our case @bodiless/backend/server.js.
 # APP_GIT_PATH='.'
