--- a/.github/workflows/build-test-lint-simple.yml
+++ b/.github/workflows/build-test-lint-simple.yml
@@ -42,6 +42,11 @@ jobs:
           git config --get user.name
           git config --get user.email
 
+      - name: Install nodegit build dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install libssl-dev
+
       - name: Install dependencies
         run: npm ci
 
