--- a/.github/workflows/build-test-lint-simple.yml
+++ b/.github/workflows/build-test-lint-simple.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install nodegit build dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install libssl-dev
+          sudo apt-get install libssl-dev libkrb5-dev
 
       - name: Install dependencies
         run: npm ci
