--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -56,7 +56,6 @@
     "@bodiless/navigation": "^0.2.9",
     "@bodiless/organisms": "^0.2.9",
     "@bodiless/ui": "^0.2.9",
-    "@types/nodegit": "^0.26.11",
     "@types/walk": "^2.3.0",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.0",
@@ -70,10 +69,8 @@
     "gatsby-plugin-emotion": "^2.0.6",
     "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-manifest": "^3.6.0",
-    "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-postcss": "4.8.0",
     "gatsby-plugin-react-helmet": "^4.6.0",
-    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-robots-txt": "^1.6.9",
     "gatsby-plugin-typescript": "^3.12.0",
     "gatsby-plugin-image": "^1.9.0",
@@ -83,12 +80,12 @@
     "git-branch": "^2.0.1",
     "glob": "^7.1.6",
     "informed": "~3.13.1",
+    "isomorphic-git": "^1.10.1",
     "lodash": "^4.17.19",
     "md5-file": "^5.0.0",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
     "mobx-react-lite": "^1.3.1",
-    "nodegit": "^0.27.0",
     "null-loader": "^3.0.0",
     "postcss": "^8.2.4",
     "process": "^0.11.10",
