--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -7,7 +7,7 @@
     "skipDefaultLibCheck": true,
     "noUnusedLocals": true,
     "lib": ["es7", "dom"],
-    "types": ["node", "jest"],
+    "types": ["jest", "node"],
     "checkJs": false,
     "jsx": "react",
     "strict": true,
@@ -32,9 +32,9 @@
       "@bodiless/card/*": ["bodiless-card/src/*"],
       "@bodiless/carousel": ["bodiless-carousel/src"],
       "@bodiless/components": ["bodiless-components/src"],
-      "@bodiless/components/*": [".bodiless-components/src/*"],
+      "@bodiless/components/*": ["bodiless-components/src/*"],
       "@bodiless/components-ui": ["bodiless-components-ui/src"],
-      "@bodiless/components-ui/*": [".bodiless-components-ui/src/*"],
+      "@bodiless/components-ui/*": ["bodiless-components-ui/src/*"],
       "@bodiless/core": ["bodiless-core/src"],
       "@bodiless/core/*": ["bodiless-core/src/*"],
       "@bodiless/core-ui": ["bodiless-core-ui/src"],
