--- a/packages/bodiless-search/package.json
+++ b/packages/bodiless-search/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@bodiless/fclasses": "^0.2.10",
     "axios": "^0.21.0",
-    "cheerio": "^1.0.0-rc.3",
+    "cheerio": "1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "glob": "^7.1.6",
     "lodash": "^4.17.19",
