--- a/packages/bodiless-components/package.json
+++ b/packages/bodiless-components/package.json
@@ -38,7 +38,7 @@
     "copyfiles": "^2.1.1",
     "debug": "^4.1.1",
     "enzyme": "^3.9.0",
-    "informed": "~3.13.1",
+    "informed": "^3.34.0",
     "lodash": "^4.17.19",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
