--- a/examples/starter/.gitignore
+++ b/examples/starter/.gitignore
@@ -8,6 +8,7 @@ yarn-error.log
 /public
 /src/components/index.css
 /src/components/bodiless.index.css
+tailwind.config.js
 
 # Temporary files
 .DS_Store
