Update eslint packages and ignore new rules

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "license": "Apache-2.0",
   "scripts": {
-    "bootstrap": "npx lerna bootstrap --hoist --strict",
+    "bootstrap": "npx lerna bootstrap --hoist --strict -- --legacy-peer-deps",
     "build": "cross-env NODE_ENV=production lerna run build --stream --ignore @bodiless/gatsby-starter-bodiless",
     "build:only": "cross-env NODE_ENV=production lerna run build --stream --scope ",
     "build:packages": "cross-env NODE_ENV=production lerna run build --stream --no-private",
@@ -78,8 +78,8 @@
     "@types/slate": "^0.44.0",
     "@types/slate-react": "^0.21.1",
     "@types/uuid": "^3.4.4",
-    "@typescript-eslint/eslint-plugin": "^2.29.0",
-    "@typescript-eslint/parser": "^2.29.0",
+    "@typescript-eslint/eslint-plugin": "^4.0.0",
+    "@typescript-eslint/parser": "^4.0.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.9.0",
@@ -91,12 +91,12 @@
     "enzyme": "^3.9.0",
     "enzyme-to-json": "^3.3.5",
     "eslint": "^7.27.0",
-    "eslint-config-airbnb": "18.1.0",
-    "eslint-config-airbnb-typescript": "^7.2.1",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.1",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^23.8.2",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.19.0",
     "fs-extra": "^8.1.0",
