--- a/packages/bodiless-ui/package.json
+++ b/packages/bodiless-ui/package.json
@@ -24,7 +24,7 @@
     "build": "tsc -p ./tsconfig.json && npm run build:css && npm run copy && npm run build:api-doc",
     "build:css": "postcss index.tailwind.css -o ./src/bodiless.index.css",
     "build:watch": "npm run build -- --watch",
-    "build:api-doc": "typedoc --out doc/api --mode file",
+    "build:api-doc": "typedoc --out doc/api src",
     "copy": "copyfiles -u 1 \"./src/*.css\" \"./lib/\"",
     "lint": "tslint ./src/**/*.ts?x",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
