--- a/packages/bodiless-core-ui/package.json
+++ b/packages/bodiless-core-ui/package.json
@@ -28,7 +28,7 @@
     "@bodiless/core": "^0.2.10",
     "@bodiless/fclasses": "^0.2.10",
     "@bodiless/ui": "^0.2.10",
-    "informed": "^3.34.0",
+    "informed": "~3.13.1",
     "lodash": "^4.17.19",
     "rc-tooltip": "^5.1.1"
   },
