--- a/packages/bodiless-tokens/package.json
+++ b/packages/bodiless-tokens/package.json
@@ -34,7 +34,7 @@
     "@bodiless/fclasses": "^0.2.10",
     "@bodiless/layouts": "^0.2.10",
     "@bodiless/layouts-ui": "^0.2.10",
-    "informed": "^3.34.0",
+    "informed": "~3.13.1",
     "lodash": "^4.17.19",
     "md5-hex": "^4.0.0",
     "mobx-react-lite": "^1.3.1",
