--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -82,7 +82,7 @@
     "gatsby-transformer-sharp": "^3.9.0",
     "git-branch": "^2.0.1",
     "glob": "^7.1.6",
-    "informed": "^3.34.0",
+    "informed": "~3.13.1",
     "isomorphic-git": "^1.10.1",
     "lodash": "^4.17.19",
     "md5-file": "^5.0.0",
