Upgrade typescript and fix type errors.

--- a/examples/starter/.env.site
+++ b/examples/starter/.env.site
@@ -40,7 +40,7 @@ ROBOTSTXT_SITEMAP='https://www.example.com/sitemap.xml'
 
 # The Site tailwind theme is enabled by default.
 # To disable it - uncomment the following line.
-# BODILESS_TAILWIND_THEME_ENABLED='0'
+BODILESS_TAILWIND_THEME_ENABLED='0'
 
 # Location of bodiless documentation
 # BODILESS_DOCS_URL='/___docs'
