--- a/examples/starter/package.json
+++ b/examples/starter/package.json
@@ -36,7 +36,7 @@
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "gatsby": "^3.6.1",
+    "gatsby": "~3.13.0",
     "gatsby-plugin-canonical-urls": "^3.6.0",
     "gatsby-plugin-google-tagmanager": "^3.6.0",
     "gatsby-plugin-sitemap": "^4.2.0",
