--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -66,6 +66,7 @@
     "fast-glob": "^3.2.5",
     "find-up": "^4.1.0",
     "fs-extra": "^8.1.0",
+    "gatsby": "~3.13.0",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-emotion": "^2.0.6",
     "gatsby-plugin-google-fonts": "^0.0.4",
