feat(components, layouts): Enable use of component selector in chameleons. (#1187)
## Changes
- Provide an api to allow configuring `withChameleonButton` to uee a component selector form instead of radio buttons.
- Remove dependency on bodiless ui packagtes in @bodiless/components

## Testing Instructions
There is a test case on the /chameleons page (the 2nd example).  Verify that it functions as expected (you can use component selector to choose a variant).

--- a/packages/bodiless-components-ui/package.json
+++ b/packages/bodiless-components-ui/package.json
@@ -28,6 +28,8 @@
     "@bodiless/components": "^0.2.10",
     "@bodiless/core": "^0.2.10",
     "@bodiless/fclasses": "^0.2.10",
+    "@bodiless/layouts": "^0.2.10",
+    "@bodiless/layouts-ui": "^0.2.10",
     "@bodiless/ui": "^0.2.10",
     "lodash": "^4.17.19"
   },
