--- a/packages/bodiless-curator/package.json
+++ b/packages/bodiless-curator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/curator",
-  "version": "0.2.10",
+  "version": "0.3.0",
   "description": "Provides integration with Curator.io",
   "author": "Carlos Eduardo Teixeira <cteixei4@its.jnj.com>",
   "license": "Apache-2.0",
@@ -20,16 +20,16 @@
   "scripts": {
     "build": "npm run copy && tsc -p ./tsconfig.json && npm run build:api-doc",
     "build:watch": "npm run build -- --watch",
-    "build:api-doc": "typedoc --out doc/api --mode file",
+    "build:api-doc": "typedoc --out doc/api src",
     "lint": "tslint ./src/**/*.ts?x",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\"",
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
-    "@bodiless/components": "^0.2.10",
-    "@bodiless/core": "^0.2.10",
-    "@bodiless/fclasses": "^0.2.10",
-    "@bodiless/layouts": "^0.2.10",
+    "@bodiless/components": "^0.3.0",
+    "@bodiless/core": "^0.3.0",
+    "@bodiless/fclasses": "^0.3.0",
+    "@bodiless/layouts": "^0.3.0",
     "@types/react-helmet": "^5.0.14",
     "lodash": "^4.17.19",
     "mobx": "^5.8.0",
