--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -39,6 +39,7 @@
       "@bodiless/core/*": ["bodiless-core/src/*"],
       "@bodiless/core-ui": ["bodiless-core-ui/src"],
       "@bodiless/core-ui/*": ["bodiless-core-ui/src/*"],
+      "@bodiless/curator/*": ["bodiless-curator/src/*"],
       "@bodiless/filtering": ["bodiless-filtering/src"],
       "@bodiless/filtering/*": ["bodiless-filtering/src/*"],
       "@bodiless/layouts": ["bodiless-layouts/src"],
