--- a/packages/bodiless-curator/package.json
+++ b/packages/bodiless-curator/package.json
@@ -5,14 +5,14 @@
   "author": "Carlos Eduardo Teixeira <cteixei4@its.jnj.com>",
   "license": "Apache-2.0",
   "main": "lib/index.js",
-  "typings": "lib.index.d.ts",
+  "typings": "lib/index.d.ts",
   "files": [
     "/lib",
     "site.tailwind.config.js"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/johnsonandjohnson/bodiless-js.git"
+    "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
   "publishConfig": {
     "access": "public"
@@ -29,22 +29,9 @@
     "@bodiless/components": "^0.3.0",
     "@bodiless/core": "^0.3.0",
     "@bodiless/fclasses": "^0.3.0",
-    "@bodiless/layouts": "^0.3.0",
-    "@types/react-helmet": "^5.0.14",
-    "lodash": "^4.17.19",
-    "mobx": "^5.8.0",
-    "mobx-react": "^5.4.3",
-    "mobx-react-lite": "^1.3.1",
-    "react-contenteditable": "^3.2.6",
-    "react-dropzone": "^10.1.5",
-    "react-helmet": "^5.2.0",
-    "uuid": "^3.3.2"
-  },
-  "devDependencies": {
-    "@types/uuid": "^3.4.4"
+    "lodash": "^4.17.19"
   },
   "peerDependencies": {
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react": "^17.0.2"
   }
 }
