--- a/packages/bodiless-components/package.json
+++ b/packages/bodiless-components/package.json
@@ -9,7 +9,8 @@
   "files": [
     "/lib",
     "/bodiless.docs.json",
-    "/doc"
+    "/doc",
+    "node-api"
   ],
   "repository": {
     "type": "git",
