--- a/packages/bodiless-layouts/package.json
+++ b/packages/bodiless-layouts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/layouts",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Layout managers for BodilessJS.",
   "author": "Erik Summerfield <esummer3@its.jnj.com>",
   "homepage": "",
@@ -34,8 +34,8 @@
     "react": "^17.0.2"
   },
   "dependencies": {
-    "@bodiless/core": "^0.3.0",
-    "@bodiless/fclasses": "^0.3.0",
+    "@bodiless/core": "^0.3.1",
+    "@bodiless/fclasses": "^0.3.1",
     "axios": "^0.21.0",
     "html2canvas": "^1.0.0-rc.3",
     "informed": "~3.13.1",
@@ -49,7 +49,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "enzyme": "^3.9.0",
-    "@types/rc-tooltip": "^3.7.1"
+    "@types/rc-tooltip": "^3.7.1",
+    "enzyme": "^3.9.0"
   }
 }
