--- a/packages/bodiless-oidc/package.json
+++ b/packages/bodiless-oidc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/oidc",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Library to provide OpenID Connect (OIDC) and OAuth2 protocol support for client-side",
   "author": "Ivan Rudiuk <IRudiuk@its.jnj.com>",
   "license": "Apache-2.0",
@@ -25,9 +25,9 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "enzyme": "^3.9.0",
-    "oidc-client-ts": "^2.0.0-beta.2",
-    "axios": "^0.21.0"
+    "oidc-client-ts": "^2.0.0-beta.2"
   },
   "peerDependencies": {
     "react": "^17.0.2",
