--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "sites:install": "node ./scripts/sites-install",
     "sites:update": "npm run sites:pack && npm run sites:install",
     "sites:launch-test": "npm run sites:clone-local test-site && npm run sites:update test-site && cd sites/test-site && npm install --legacy-peer-deps && npm run start",
-    "start": "npm run build:watch",
+    "start": "lerna run start --stream --scope @bodiless/test-site",
     "test": "jest",
     "test:ci": "WAIT_ON_TIMEOUT=600000 start-server-and-test sites:launch-test http://localhost:8005 cy:run",
     "test:watch": "jest --watch"
