fix(informed): Unlock "informed" package version, fix related issues (#1212)

--- a/packages/bodiless-core-ui/package.json
+++ b/packages/bodiless-core-ui/package.json
@@ -28,7 +28,7 @@
     "@bodiless/core": "^0.3.1",
     "@bodiless/fclasses": "^0.3.1",
     "@bodiless/ui": "^0.3.1",
-    "informed": "~3.13.1",
+    "informed": "^3.34.0",
     "lodash": "^4.17.19",
     "rc-tooltip": "^5.1.1"
   },
