--- a/packages/bodiless-layouts/package.json
+++ b/packages/bodiless-layouts/package.json
@@ -38,7 +38,7 @@
     "@bodiless/fclasses": "^0.3.1",
     "axios": "^0.21.0",
     "html2canvas": "^1.0.0-rc.3",
-    "informed": "~3.13.1",
+    "informed": "^3.34.0",
     "lodash": "^4.17.19",
     "md5-hex": "^4.0.0",
     "mobx-react-lite": "^1.3.1",
