--- a/packages/bodiless-ui/package.json
+++ b/packages/bodiless-ui/package.json
@@ -33,7 +33,7 @@
     "@bodiless/core": "^0.3.1",
     "@bodiless/fclasses": "^0.3.1",
     "autoprefixer": "^9.8.6",
-    "informed": "~3.13.1",
+    "informed": "^3.34.0",
     "lodash": "^4.17.19",
     "postcss": "^8.2.4",
     "tailwindcss": "^2.0.2",
