--- a/packages/bodiless-backend/package.json
+++ b/packages/bodiless-backend/package.json
@@ -15,6 +15,7 @@
     "formidable": "^1.2.1",
     "fs-extra": "^8.1.0",
     "lodash": "^4.17.19",
+    "replace-in-file": "^6.2.0",
     "rimraf": "^2.6.3",
     "tmp": "^0.0.33",
     "uuid": "^3.3.2"
