--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,8 @@
   "command": {
     "publish": {
       "allowBranch": "release",
-      "message": "chore(release): publish %s"
+      "message": "chore(release): publish %s",
+      "registry": "http://localhost:4873/"
     }
   },
   "version": "0.3.1"
