chore(release): publish v0.3.2-local.0

--- a/packages/bodiless-curator/package.json
+++ b/packages/bodiless-curator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/curator",
-  "version": "0.3.1",
+  "version": "0.3.2-local.0",
   "description": "Provides integration with Curator.io",
   "author": "Carlos Eduardo Teixeira <cteixei4@its.jnj.com>",
   "license": "Apache-2.0",
@@ -28,9 +28,9 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
-    "@bodiless/components": "^0.3.1",
-    "@bodiless/core": "^0.3.1",
-    "@bodiless/fclasses": "^0.3.1",
+    "@bodiless/components": "^0.3.2-local.0",
+    "@bodiless/core": "^0.3.2-local.0",
+    "@bodiless/fclasses": "^0.3.2-local.0",
     "lodash": "^4.17.19"
   },
   "devDependencies": {
