--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/gatsby-theme-bodiless",
-  "version": "0.3.1",
+  "version": "0.3.2-local.0",
   "description": "A Gatsby theme for BodilessJS",
   "author": "Chris Oden <coden@its.jnj.com>",
   "homepage": "",
@@ -47,17 +47,17 @@
     "copy": "copyfiles -u 1 \"./src/dist/**/*.{json,jpg,png}\" \".\""
   },
   "dependencies": {
-    "@bodiless/accordion": "^0.3.1",
-    "@bodiless/card": "^0.3.1",
-    "@bodiless/components": "^0.3.1",
-    "@bodiless/components-ui": "^0.3.1",
-    "@bodiless/core": "^0.3.1",
-    "@bodiless/core-ui": "^0.3.1",
-    "@bodiless/fclasses": "^0.3.1",
-    "@bodiless/layouts": "^0.3.1",
-    "@bodiless/navigation": "^0.3.1",
-    "@bodiless/organisms": "^0.3.1",
-    "@bodiless/ui": "^0.3.1",
+    "@bodiless/accordion": "^0.3.2-local.0",
+    "@bodiless/card": "^0.3.2-local.0",
+    "@bodiless/components": "^0.3.2-local.0",
+    "@bodiless/components-ui": "^0.3.2-local.0",
+    "@bodiless/core": "^0.3.2-local.0",
+    "@bodiless/core-ui": "^0.3.2-local.0",
+    "@bodiless/fclasses": "^0.3.2-local.0",
+    "@bodiless/layouts": "^0.3.2-local.0",
+    "@bodiless/navigation": "^0.3.2-local.0",
+    "@bodiless/organisms": "^0.3.2-local.0",
+    "@bodiless/ui": "^0.3.2-local.0",
     "@types/walk": "^2.3.0",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.0",
