--- a/packages/bodiless-accordion/package.json
+++ b/packages/bodiless-accordion/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/accordion",
-  "version": "0.3.1",
+  "version": "0.3.2-local.0",
   "description": "Basic accordion component.",
   "author": "Guilherme Zeni <gzeni@its.jnj.com>",
   "license": "Apache-2.0",
@@ -26,9 +26,9 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
-    "@bodiless/components": "^0.3.1",
-    "@bodiless/core": "^0.3.1",
-    "@bodiless/fclasses": "^0.3.1",
+    "@bodiless/components": "^0.3.2-local.0",
+    "@bodiless/core": "^0.3.2-local.0",
+    "@bodiless/fclasses": "^0.3.2-local.0",
     "@types/react-helmet": "^5.0.14",
     "lodash": "^4.17.19",
     "mobx": "^5.8.0",
