--- a/packages/bodiless-components/package.json
+++ b/packages/bodiless-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/components",
-  "version": "0.3.1",
+  "version": "0.3.2-local.0",
   "description": "Reusable compoments",
   "author": "Heidi Vanyo <hvanyo@its.jnj.com>",
   "license": "Apache-2.0",
@@ -28,9 +28,9 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
-    "@bodiless/core": "^0.3.1",
-    "@bodiless/fclasses": "^0.3.1",
-    "@bodiless/layouts": "^0.3.1",
+    "@bodiless/core": "^0.3.2-local.0",
+    "@bodiless/fclasses": "^0.3.2-local.0",
+    "@bodiless/layouts": "^0.3.2-local.0",
     "@types/react-helmet": "^5.0.14",
     "axios": "^0.21.0",
     "common-tags": "^1.8.0",
