--- a/packages/bodiless-documentation/package.json
+++ b/packages/bodiless-documentation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/documentation",
-  "version": "0.3.1",
+  "version": "0.3.2-local.0",
   "description": "A tool to aggregate markdown files for rendering by docsify",
   "author": "Erik Summerfield <esummer3@its.jnj.com>",
   "homepage": "",
