--- a/packages/bodiless-layouts-ui/package.json
+++ b/packages/bodiless-layouts-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/layouts-ui",
-  "version": "0.3.1",
+  "version": "0.3.2-local.0",
   "description": "Default UI for BodilessJS Layouts",
   "author": "Ivan Rudiuk <IRudiuk@its.jnj.com>",
   "license": "Apache-2.0",
@@ -25,9 +25,9 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/fclasses": "^0.3.1",
-    "@bodiless/layouts": "^0.3.1",
-    "@bodiless/ui": "^0.3.1",
+    "@bodiless/fclasses": "^0.3.2-local.0",
+    "@bodiless/layouts": "^0.3.2-local.0",
+    "@bodiless/ui": "^0.3.2-local.0",
     "re-resizable": "^4.11.0",
     "react-sortable-hoc": "^1.9.1"
   },
