--- a/packages/bodiless-tokens/package.json
+++ b/packages/bodiless-tokens/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/tokens",
-  "version": "0.3.1",
+  "version": "0.3.2-local.0",
   "description": "Utilities for browsing and organizing tokens.",
   "author": "Chris Oden <coden@its.jnj.com>",
   "homepage": "",
@@ -30,10 +30,10 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/core": "^0.3.1",
-    "@bodiless/fclasses": "^0.3.1",
-    "@bodiless/layouts": "^0.3.1",
-    "@bodiless/layouts-ui": "^0.3.1",
+    "@bodiless/core": "^0.3.2-local.0",
+    "@bodiless/fclasses": "^0.3.2-local.0",
+    "@bodiless/layouts": "^0.3.2-local.0",
+    "@bodiless/layouts-ui": "^0.3.2-local.0",
     "informed": "^3.34.0",
     "lodash": "^4.17.19",
     "md5-hex": "^4.0.0",
