--- a/packages/bodiless-youtube/package.json
+++ b/packages/bodiless-youtube/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/youtube",
-  "version": "0.3.1",
+  "version": "0.3.2-local.0",
   "description": "Bodiless YouTube component.",
   "author": "Ivan Rudiuk <IRudiuk@its.jnj.com>",
   "license": "Apache-2.0",
@@ -27,9 +27,9 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
-    "@bodiless/components": "^0.3.1",
-    "@bodiless/core": "^0.3.1",
-    "@bodiless/fclasses": "^0.3.1",
+    "@bodiless/components": "^0.3.2-local.0",
+    "@bodiless/core": "^0.3.2-local.0",
+    "@bodiless/fclasses": "^0.3.2-local.0",
     "lodash": "^4.17.19"
   },
   "peerDependencies": {
