--- a/packages/fclasses/package.json
+++ b/packages/fclasses/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/fclasses",
-  "version": "0.3.1",
+  "version": "0.3.2-local.0",
   "description": "Allows for the injection of functional class into components.",
   "author": "Chris Oden <coden@its.jnj.com>",
   "homepage": "",
