--- a/packages/headless-chrome-crawler/package.json
+++ b/packages/headless-chrome-crawler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/headless-chrome-crawler",
-  "version": "0.3.1",
+  "version": "0.3.2-local.0",
   "description": "Fork of https://github.com/yujiosaka/headless-chrome-crawler.git",
   "main": "index.js",
   "license": "Apache-2.0",
