fix(adminui): Fix admin ui issue (#1307)
* Fix admin ui issue

* Using wildcard instead of specific css files

* Update bodiless-components side effect file array

Co-authored-by: hvanyo <58534559+hvanyo@users.noreply.github.com>
Co-authored-by: Lucas Varela <lvarelab@its.jnj.com>

--- a/packages/bodiless-ui/package.json
+++ b/packages/bodiless-ui/package.json
@@ -6,8 +6,7 @@
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "sideEffects": [
-    "./src/bodiless.index.css",
-    "./src/Spinner.css"
+    "*.css"
   ],
   "typings": "lib/index.d.ts",
   "files": [
