Disable gatsby telemetry on test site.

--- a/examples/test-site/.env.site
+++ b/examples/test-site/.env.site
@@ -76,3 +76,5 @@ BODILESS_DOCS_API_ENABLED=1
 # Default is 1.
 # To change default value - uncomment the following line.
 # BODILESS_DEFAULT_CONTENT_AUTO_DISCOVERY_DEPTH='1'
+
+GATSBY_TELEMETRY_DISABLED=1
