--- a/packages/bodiless-oidc/package.json
+++ b/packages/bodiless-oidc/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "enzyme": "^3.9.0",
-    "oidc-client-ts": "^2.0.0-beta.2"
+    "oidc-client-ts": "2.0.0-rc.2"
   },
   "peerDependencies": {
     "react": "^17.0.2",
