--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -29,6 +29,7 @@
     "src/no-scroll-settings.json",
     "build-css.js",
     "create-node.js",
+    "create-redirect-alias.js",
     "tailwind.base.config.js",
     "/doc",
     "bodiless.content.json",
@@ -75,6 +76,7 @@
     "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-image": "^1.9.0",
     "gatsby-plugin-manifest": "^3.6.0",
+    "gatsby-plugin-meta-redirect": "^1.1.1",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-postcss": "4.8.0",
     "gatsby-plugin-react-helmet": "^4.6.0",
