--- a/packages/bodiless-core/package.json
+++ b/packages/bodiless-core/package.json
@@ -30,6 +30,7 @@
     "@bodiless/fclasses": "^0.3.5",
     "@types/react-tag-autocomplete": "^5.12.0",
     "enzyme": "^3.9.0",
+    "axios": "^0.21.0",
     "informed": "^3.34.0",
     "lodash": "^4.17.19",
     "mobx": "^5.8.0",
