--- a/examples/starter/package.json
+++ b/examples/starter/package.json
@@ -39,6 +39,7 @@
     "gatsby": "~3.13.0",
     "gatsby-plugin-canonical-urls": "^3.6.0",
     "gatsby-plugin-sitemap": "^4.2.0",
+    "glob": "^7.1.6",
     "lodash": "^4.17.19",
     "ora": "^4.0.2",
     "postcss": "^8.2.4",
