feat(icon): Remove material icons font from production build (#1322)
* Enable gatsby-plugin-google-fonts in edit environment or site enable it

* Fix tests

* Replace search icon with svg

* Replace toggle search icon with svg

* Replace burger menu toggle icon with svg

* Update doc

* Replace accordion icon with svg

* Fix test

* Update search button

* Update search toggle button

* Update burger menu button

* Update share icon

* Update home icon on breadcrumb page

* Update carousel play and pause icons

* Turn all .csvg files into normal React components

* Remove @svgr/webpack

* Fix minor typo

* Update fonts documentation

* Update copyright date

* Remove unused search icon file

* Update .env comments

* Rollback all .csvg changes

Co-authored-by: Lucas Varela <lvarelab@its.jnj.com>
Co-authored-by: Lucas Varela <hi@lucasvarela.dev>

--- a/examples/test-site/.env.site
+++ b/examples/test-site/.env.site
@@ -16,9 +16,10 @@ BODILESS_BACKEND_COMMIT_ENABLED='1'
 # Site's absolute production URL for use in generating Canonical & Sitemap.xml.
 SITE_URL='https://www.example.com/'
 
-# The Google Fonts plugin is enabled by default.
-# To disable it - uncomment the following line.
-# GOOGLE_FONTS_ENABLED='0'
+# The Google Fonts plugin is disabled in production by default.
+# To enable it - uncomment the line below. Note that Google fonts 
+# are always included in development builds.
+# GOOGLE_FONTS_ENABLED='1'
 
 # GTM is enabled by default.
 # To disable it - uncomment the following line
