--- a/examples/starter/.env.site
+++ b/examples/starter/.env.site
@@ -13,9 +13,10 @@
 # BODILESS_BACKEND_PUBLIC_PAGE_PATH = 'public/page-data'
 BODILESS_BACKEND_PORT="8001"
 
-# The Google Fonts plugin is enabled by default.
-# To disable it - uncomment the following line.
-# GOOGLE_FONTS_ENABLED='0'
+# The Google Fonts plugin is disabled in production by default.
+# To enable it - uncomment the line below. Note that Google fonts 
+# are always included in development builds.
+# GOOGLE_FONTS_ENABLED='1'
 
 # Site's absolute production URL for use in generating Canonical & Sitemap.xml.
 SITE_URL='https://www.example.com/'
