Remove packging of resolveConfigs.ts

--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -32,8 +32,7 @@
     "create-redirect-alias.js",
     "tailwind.base.config.js",
     "/doc",
-    "bodiless.content.json",
-    "src/dist/tailwindcss/resolveConfig.ts"
+    "bodiless.content.json"
   ],
   "repository": {
     "type": "git",
