--- a/packages/bodiless-components/package.json
+++ b/packages/bodiless-components/package.json
@@ -34,6 +34,7 @@
     "@bodiless/core": "^0.3.5",
     "@bodiless/fclasses": "^0.3.5",
     "@bodiless/layouts": "^0.3.5",
+    "@bodiless/ui": "^0.3.5",
     "@types/react-helmet": "^5.0.14",
     "axios": "^0.21.0",
     "common-tags": "^1.8.0",
