--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "keywords": [
     "gatsby"
   ],
+  "workspaces": [
+    "packages/*",
+    "examples/*"
+  ],
   "license": "Apache-2.0",
   "scripts": {
     "bootstrap": "npx lerna bootstrap --hoist --strict -- --legacy-peer-deps",
