WIP on switch to workspaces.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "gatsby"
   ],
   "license": "Apache-2.0",
+  "workspaces": [
+    "sites/*",
+    "packages/*"
+  ],
   "scripts": {
-    "bootstrap": "npx lerna bootstrap --hoist --strict -- --legacy-peer-deps",
+    "bootstrap": "npm install",
     "build": "cross-env NODE_ENV=production lerna run build --stream --ignore @bodiless/gatsby-starter-bodiless",
     "build:only": "cross-env NODE_ENV=production lerna run build --stream --scope ",
     "build:packages": "cross-env NODE_ENV=production lerna run build --stream --no-private",
@@ -38,7 +42,7 @@
     "lerna:publish": "lerna publish from-git --yes --dist-tag latest",
     "lerna:canary": "lerna publish --canary --include-merged-tags --preid ks-canary --dist-tag ks-canary --force-publish",
     "serve": "lerna run serve --scope @bodiless/test-site --stream",
-    "setup": "npm run bootstrap && npm run build:packages",
+    "setup": "npm i && npm run build:packages",
     "sites:pack": "lerna exec --no-private --stream -- npm pack",
     "sites:clone-local": "node ./scripts/sites-clone",
     "sites:install": "node ./scripts/sites-install",
