Complete switch to workspaces.

--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "scripts": {
     "bootstrap": "npm install",
     "build": "cross-env NODE_ENV=production lerna run build --stream --ignore @bodiless/gatsby-starter-bodiless",
-    "build:only": "cross-env NODE_ENV=production lerna run build --stream --scope ",
+    "build:only": "cross-env NODE_ENV=production lerna run build --stream --scope",
     "build:packages": "cross-env NODE_ENV=production lerna run build --stream --no-private",
     "build:watch": "cross-env NODE_ENV=development lerna run build:watch --parallel",
     "build:env-vars": "cross-env NODE_ENV=production lerna run build:env-vars --stream",
     "build:tailwind-configs": "cross-env NODE_ENV=production lerna run build:tailwind-configs --stream",
     "build:doc": "cross-env NODE_ENV=production lerna run build:doc --stream",
     "build:api-doc": "cross-env NODE_ENV=production lerna run build:api-doc --stream",
-    "check": "cross-env NODE_ENV=production lerna run check --stream",
+    "check": "cross-env NODE_EnpNV=production lerna run check --stream",
     "clean": "lerna run clean && rimraf .eslintcache sites/*/.env.development sites/*/.env.production",
     "cy:run": "cypress run --browser chrome --record --key 0dcfb624-e152-453a-9375-aa710adb57ab",
     "cy:open": "cypress open",
@@ -48,7 +48,7 @@
     "sites:install": "node ./scripts/sites-install",
     "sites:update": "npm run sites:pack && npm run sites:install",
     "sites:launch-test": "npm run sites:clone-local test-site && npm run sites:update test-site && cd sites/test-site && npm install --legacy-peer-deps && npm run start",
-    "start": "lerna run start --stream --scope @bodiless/test-site",
+    "start": "npm run start --workspace=@bodiless/test-site",
     "test": "jest",
     "test:ci": "WAIT_ON_TIMEOUT=600000 start-server-and-test sites:launch-test http://localhost:8005 cy:run",
     "test:watch": "jest --watch"
