Add sync check to CI and Husky

--- a/.github/workflows/build-test-lint-simple.yml
+++ b/.github/workflows/build-test-lint-simple.yml
@@ -45,8 +45,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build
-        run: npm run setup
+      - name: Check dependency sync
+        run: npm run sync:check
+      
+      - name: Build packages
+        run: npm run build:packages
 
       - name: Lint
         run: npm run lint
