--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run lint && npm run check"
+      "pre-push": "npm run sync:list && npm run lint && npm run check"
     }
   },
   "dependencies": {
