--- a/packages/bodiless-filtering/package.json
+++ b/packages/bodiless-filtering/package.json
@@ -36,6 +36,7 @@
     "@bodiless/core": "^0.3.6",
     "@bodiless/fclasses": "^0.3.6",
     "@bodiless/organisms": "^0.3.6",
+    "informed": "^3.34.0",
     "lodash": "^4.17.19",
     "uuid": "^3.3.2"
   },
