--- a/packages/cx-layout/package.json
+++ b/packages/cx-layout/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@bodiless/components": "^0.3.6",
     "@bodiless/core": "^0.3.6",
+    "@bodiless/cx-elements": "^0.3.6",
     "@bodiless/fclasses": "^0.3.6",
     "@types/react-helmet": "^5.0.14",
     "lodash": "^4.17.19",
