Complete mobx 6 upgrade

--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -20,6 +20,7 @@
     "declarationMap": true,
     "allowJs": false,
     "strictNullChecks": true,
+    "useDefineForClassFields": true,
     "baseUrl": "packages",
     "paths": {
       "@bodiless/accessibility": ["bodiless-accessibility/src"],
