--- a/packages/bodiless-components/package.json
+++ b/packages/bodiless-components/package.json
@@ -35,7 +35,6 @@
     "@bodiless/fclasses": "^0.3.6",
     "@bodiless/layouts": "^0.3.6",
     "@bodiless/ui": "^0.3.6",
-    "@types/react-helmet": "^6.1.0",
     "axios": "^0.21.0",
     "common-tags": "^1.8.0",
     "copyfiles": "^2.1.1",
@@ -48,12 +47,13 @@
     "rc-tooltip": "^5.1.1",
     "react-contenteditable": "^3.2.6",
     "react-dropzone": "^10.1.5",
-    "react-helmet": "^6.1.0",
     "uuid": "^3.3.2"
   },
   "peerDependencies": {
+    "@types/react-helmet": "^6.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@types/common-tags": "^1.8.0",
