--- a/packages/cx-elements/package.json
+++ b/packages/cx-elements/package.json
@@ -29,13 +29,11 @@
     "@bodiless/components": "^0.3.7",
     "@bodiless/core": "^0.3.7",
     "@bodiless/fclasses": "^0.3.7",
-    "@types/react-helmet": "^5.0.14",
     "lodash": "^4.17.19",
     "mobx": "^6.0.0",
     "mobx-react": "^7.2.1",
     "react-contenteditable": "^3.2.6",
     "react-dropzone": "^10.1.5",
-    "react-helmet": "^5.2.0",
     "react-id-generator": "^3.0.1",
     "uuid": "^3.3.2"
   },
@@ -43,7 +41,9 @@
     "@types/uuid": "^3.4.4"
   },
   "peerDependencies": {
+    "@types/react-helmet": "^6.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0"
   }
 }
