--- a/packages/cx-flowcontainer/package.json
+++ b/packages/cx-flowcontainer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/cx-flowcontainer",
-  "version": "^0.3.7",
+  "version": "0.3.7",
   "description": "Flowcontainer tokens for the bodiless cx design system",
   "author": "Chris Odem <coden@its.jnj.com>",
   "license": "Apache-2.0",
