--- a/sites/__cxstarter__/package.json
+++ b/sites/__cxstarter__/package.json
@@ -18,6 +18,7 @@
     "@bodiless/cx-editors": "^0.3.7",
     "@bodiless/cx-elements": "^0.3.7",
     "@bodiless/cx-templates": "^0.3.7",
+    "@bodiless/documentation": "^0.3.7",    
     "@bodiless/fclasses": "^0.3.7",
     "@bodiless/gatsby-theme-bodiless": "^0.3.7",
     "autoprefixer": "^10.0.0",
