cx-link package updated with linkicon font

--- a/packages/cx-link/package.json
+++ b/packages/cx-link/package.json
@@ -11,7 +11,8 @@
     "/lib",
     "/bodiless.docs.json",
     "/site.tailwind.config.js",
-    "/doc"
+    "/doc",
+    "/assets"
   ],
   "repository": {
     "type": "git",
