Add CX packages to tsconfig paths array

--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -42,6 +42,12 @@
       "@bodiless/core-ui/*": ["bodiless-core-ui/src/*"],
       "@bodiless/curator/": ["bodiless-curator/src/"],
       "@bodiless/curator/*": ["bodiless-curator/src/*"],
+      "@bodiless/cx-elements": ["cx-elements/src/"],
+      "@bodiless/cx-elements/*": ["cx-elements/src/*"],
+      "@bodiless/cx-image": ["cx-image/src/"],
+      "@bodiless/cx-image/*": ["cx-image/src/*"],
+      "@bodiless/cx-layout": ["cx-layout/src/"],
+      "@bodiless/cx-layout/*": ["cx-layout/src/*"],
       "@bodiless/filtering": ["bodiless-filtering/src"],
       "@bodiless/filtering/*": ["bodiless-filtering/src/*"],
       "@bodiless/layouts": ["bodiless-layouts/src"],
