Remove unnecessary .js extension

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build:api-doc": "cross-env NODE_ENV=production lerna run build:api-doc --stream",
     "check": "cross-env NODE_ENV=production lerna run check --stream",
     "clean": "lerna run clean && rimraf .eslintcache sites/*/.env.development sites/*/.env.production",
-    "clean:symlinks": "node ./scripts/remove-site-symlinks.js @bodiless",
+    "clean:symlinks": "node ./scripts/remove-site-symlinks @bodiless",
     "cy:run": "cypress run --browser chrome --record --key 0dcfb624-e152-453a-9375-aa710adb57ab",
     "cy:open": "cypress open",
     "cypress": "run-p -r start cy:open",
