Add a mechanism to prevent component hydration
The richtext package was also updated to use these mechanisms,
although only a small subset of its public API was reimplemented.

--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -60,6 +60,8 @@
       "@bodiless/cx-templates/*": ["cx-templates/src/*"],      
       "@bodiless/filtering": ["bodiless-filtering/src"],
       "@bodiless/filtering/*": ["bodiless-filtering/src/*"],
+      "@bodiless/hydration": ["bodiless-hydration/src"],
+      "@bodiless/hydration/*": ["bodiless-hydration/src/*"],
       "@bodiless/layouts": ["bodiless-layouts/src"],
       "@bodiless/layouts/*": ["bodiless-layouts/src/*"],
       "@bodiless/layouts-ui": ["bodiless-layouts-ui/src"],
