--- a/packages/bodiless-richtext/package.json
+++ b/packages/bodiless-richtext/package.json
@@ -14,6 +14,10 @@
     "/doc",
     "/bodiless.docs.json"
   ],
+  "exports": {
+    "production": "./lib/index.static.js",
+    "default": "./lib/index.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
@@ -32,6 +36,7 @@
   "dependencies": {
     "@bodiless/core": "^0.3.7",
     "@bodiless/fclasses": "^0.3.7",
+    "@bodiless/hydration": "^0.3.7",
     "@emotion/core": "^10.0.14",
     "@emotion/css": "^10.0.14",
     "@emotion/styled": "^10.0.14",
