--- a/packages/cx-editors/package.json
+++ b/packages/cx-editors/package.json
@@ -5,6 +5,12 @@
   "author": "Chris Odem <coden@its.jnj.com>",
   "license": "Apache-2.0",
   "main": "lib/index.js",
+  "exports": {
+    ".": {
+      "default": "./lib/index.js",
+      "bodiless:static": "./lib/index.static.js",
+    }
+  },
   "sideEffects": false,
   "typings": "lib/index.d.ts",
   "files": [
