--- a/packages/cx-editors/package.json
+++ b/packages/cx-editors/package.json
@@ -8,7 +8,7 @@
   "exports": {
     ".": {
       "default": "./lib/index.js",
-      "bodiless:static": "./lib/index.static.js",
+      "bodiless:static": "./lib/index.static.js"
     }
   },
   "sideEffects": false,
