--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -88,6 +88,8 @@
       "@bodiless/table/*": ["bodiless-table/src/*"],
       "@bodiless/youtube": ["bodiless-youtube/src"],
       "@bodiless/youtube/*": ["bodiless-youtube/src/*"],
+      "@bodiless/webpack": ["bodiless-webpack/src"],
+      "@bodiless/webpack/*": ["bodiless-webpack/src/*"],
       "@bodiless/fclasses": ["fclasses/src"],
       "@bodiless/fclasses/*": ["fclasses/src/*"],
       "@bodiless/gatsby-theme-bodiless": ["gatsby-theme-bodiless/src"],
