Add editors with static tokens enable.  Working.

--- a/packages/cx-editors/package.json
+++ b/packages/cx-editors/package.json
@@ -35,6 +35,7 @@
     "@bodiless/cx-link": "^0.3.7",
     "@bodiless/core": "^0.3.7",
     "@bodiless/fclasses": "^0.3.7",
+    "@bodiless/hydration": "^0.3.7",
     "@bodiless/layouts": "^0.3.7",
     "@bodiless/layouts-ui": "^0.3.7",
     "@bodiless/richtext": "^0.3.7",
